--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="mainContainer">
-        <div id="teesContainer"></div>
+        <div id="teesContainer">Hey...</div>
     </div>
 
     <script src="js/golfScript.js"></script>
