--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div id="mainContainer">
         <div id="teesContainer">
-            <div id="pro"></div>
-            <div id="champion"></div>
-            <div id="men"></div>
-            <div id="women"></div>
+            <div id="pro" class="tees"></div>
+            <div id="champion" class="tees"></div>
+            <div id="men" class="tees"></div>
+            <div id="women" class="tees"></div>
         </div>
     </div>
 
