new stuff in class

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <title>Bee A Sports - It's in the activity done for enjoyment!</title>
     <link rel="stylesheet" href="css/golfStyle.css">
-    <link href="https://fonts.googleapis.com/css?family=Proza+Libre" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Proza+Libre" rel="stylesheet">
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
 </head>
 <body>
     <header id="cardHeader">Bee A Sports&trade; - Golf Score Card</header>
     <div id="mainContainer">
         <div id="teesContainer">
-            <div id="pro" class="tees"></div>
-            <div id="champion" class="tees"></div>
-            <div id="men" class="tees"></div>
-            <div id="women" class="tees"></div>
+            <header id="holeHeader">I'm where the titles go!</header>
+            <div id="pro" class="tees">I'm the pro tees!</div>
+            <div id="champion" class="tees">I'm the champion tees!</div>
+            <div id="men" class="tees">I'm the men tees!</div>
+            <div id="women" class="tees">I'm the women tees!</div>
+            <div id="scoreCard"></div>
         </div>
     </div>
 
