--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header id="cardHeader">Bee A Sports&trade; - Golf Score Card</header>
     <div id="mainContainer">
+        <!--the main container will start out with the course selection and number of player selection-->
         <div id="teesContainer">
             <header id="holeHeader">I'm where the titles go!</header>
             <div id="pro" class="tees">I'm the pro tees!</div>
