initial state change (sort of) - dynamically add the tee rows

--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
     <header id="cardHeader">Bee A Sports&trade; - Golf Score Card</header>
     <div id="mainContainer">
         <!--the main container will start out with the course selection and number of player selection-->
-        <div id="teesContainer">
-            <header id="holeHeader">I'm where the titles go!</header>
-            <div id="pro" class="tees">I'm the pro tees!</div>
-            <div id="champion" class="tees">I'm the champion tees!</div>
-            <div id="men" class="tees">I'm the men tees!</div>
-            <div id="women" class="tees">I'm the women tees!</div>
-            <div id="scoreCard"></div>
-        </div>
+        <div id="teesContainer"></div>
+        <button id="justAButton">Press me!</button>
     </div>
+
 
     <script src="js/golfScript.js"></script>
 </body>
