getting better - almost to the adding of the billion columns

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <link rel="stylesheet" href="css/golfStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Proza+Libre" rel="stylesheet">
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
+    <script src="https://use.fontawesome.com/44ea897ebc.js"></script>
 </head>
+
 <body>
     <header id="cardHeader">Bee A Sports&trade; - Golf Score Card</header>
     <div id="mainContainer">
+        <div id="loading">
+            <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
+        </div>
         <!--the main container will start out with the course selection and number of player selection-->
-        <div id="teesContainer"></div>
-        <button id="justAButton">Press me!</button>
+        <button id="courseSelectBtn">Select Course</button>
     </div>
 
 
