--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="mainContainer">
         <div id="loading">
             <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
+            <div>Loading...</div>
         </div>
         <!--the main container will start out with the course selection and number of player selection-->
         <button id="courseSelectBtn">Select Course</button>
