add player probably finished with checking for blank name and duplicate names

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <button id="courseSelectBtn">Select Course</button>
     </div>
 
+    <div id="playerModal">
+        <div id="modalContent"></div>
+        <div id="btnDiv">
+            <button id="playerSubmitBtn"></button>
+        </div>
+    </div>
+
 
     <script src="js/golfScript.js"></script>
 </body>
