--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Proza+Libre" rel="stylesheet">
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
     <script src="https://use.fontawesome.com/44ea897ebc.js"></script>
+    <script src="js/golfScript.js" defer></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
     <div id="mainContainer">
         <div id="loading">
             <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
-            <div>Loading...</div>
+            <div>Loading Course Data...</div>
         </div>
         <!--the main container will start out with the course selection and number of player selection-->
         <button id="courseSelectBtn">Select Course</button>
@@ -28,6 +29,6 @@
     </div>
 
 
-    <script src="js/golfScript.js"></script>
+
 </body>
 </html>
