starting to add map of hole and tee, but really need to do work instead...

--- a/testing.html
+++ b/testing.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
+    <script async defer src="js/testJSON.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJtG8Iq8wEWzXx50gvTg1Vv-O_RLQ8qg&callback=initMap"></script>
+
+
+    <style>
+        #map {
+            width: 80%;
+            height: 600px;
+            background-color: grey;
+        }
+    </style>
 </head>
 <body>
-    <script src="js/testJSON.js"></script>
+    <div id="map"></div>
 </body>
 </html>
