functioning maps as far as I can tell

--- a/testing.html
+++ b/testing.html
@@ -10,8 +10,9 @@
 
     <style>
         #map {
+            margin: 0 auto;
             width: 80%;
-            height: 600px;
+            height: 800px;
             background-color: grey;
         }
     </style>
