--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Proza+Libre" rel="stylesheet">
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
     <script src="https://use.fontawesome.com/44ea897ebc.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJtG8Iq8wEWzXx50gvTg1Vv-O_RLQ8qg"></script>
     <script src="js/golfScript.js" defer></script>
 </head>
 
@@ -22,13 +23,19 @@
     </div>
 
     <div id="playerModal">
+        <div id="closePlayerModal">&times;</div>
         <div id="modalContent"></div>
         <div id="btnDiv">
             <button id="playerSubmitBtn"></button>
         </div>
     </div>
 
-
+    <div id="mapModal">
+        <div id="closeMapModal">&times;</div>
+        <div id="mapModalContent">
+            <div id="map"></div>
+        </div>
+    </div>
 
 </body>
 </html>
