swap of title and header text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bee A Sports - It's in the activity done for enjoyment!</title>
+    <title>Golf Score Card</title>
     <link rel="stylesheet" href="css/golfStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Proza+Libre" rel="stylesheet">
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header id="cardHeader">Bee A Sports&trade; - Golf Score Card</header>
+    <header id="cardHeader">Bee A Sports&trade; - It's in the activity done for enjoyment!</header>
     <div id="mainContainer">
         <div id="loading">
             <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
