now to try to get various courses and maybe add a weather widget

--- a/testing.html
+++ b/testing.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
-    <script async defer src="js/testJSON.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJtG8Iq8wEWzXx50gvTg1Vv-O_RLQ8qg&callback=initMap"></script>
+    <script async defer src="js/startPage.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJtG8Iq8wEWzXx50gvTg1Vv-O_RLQ8qg"></script>
 
 
     <style>
