--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
     <script src="https://use.fontawesome.com/44ea897ebc.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJtG8Iq8wEWzXx50gvTg1Vv-O_RLQ8qg"></script>
+
     <script src="js/golfScript.js" defer></script>
 </head>
 
@@ -19,6 +20,9 @@
             <div>Loading Course Data...</div>
         </div>
         <!--the main container will start out with the course selection and number of player selection-->
+        <select id="courseSelectMenu">
+            <option disabled selected value> -- Select a Golf Course -- </option>
+        </select>
         <button id="courseSelectBtn">Select Course</button>
     </div>
 
@@ -37,5 +41,6 @@
         </div>
     </div>
 
+    <script src="/js/startPage.js"></script>
 </body>
 </html>
