added BeeA Sports logo and got course menu to populate

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <title>Golf Score Card</title>
     <link rel="stylesheet" href="css/golfStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Proza+Libre" rel="stylesheet">
+    <link rel="icon" href="images/favicon2.ico" type="image/x-icon">
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
     <script src="https://use.fontawesome.com/44ea897ebc.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJtG8Iq8wEWzXx50gvTg1Vv-O_RLQ8qg"></script>
-
+    <script src="js/startPage.js"></script>
     <script src="js/golfScript.js" defer></script>
 </head>
 
 <body>
-    <header id="cardHeader">Bee A Sports&trade; - It's in the activity done for enjoyment!</header>
+    <img id="logoSpot" src="images/BeeALogo.png" width="70px">
+    <header id="cardHeader">It's in the activity done for enjoyment!</header>
     <div id="mainContainer">
         <div id="loading">
             <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
@@ -40,7 +42,5 @@
             <div id="map"></div>
         </div>
     </div>
-
-    <script src="/js/startPage.js"></script>
 </body>
 </html>
