just swapping favicons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Golf Score Card</title>
     <link rel="stylesheet" href="css/golfStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Proza+Libre" rel="stylesheet">
-    <link rel="icon" href="images/favicon2.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script src="public/thirdParty/jquery/dist/jquery.js"></script>
     <script src="https://use.fontawesome.com/44ea897ebc.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJtG8Iq8wEWzXx50gvTg1Vv-O_RLQ8qg"></script>
