--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div id="courseInfo"></div>
         <div id="courseSelectBtncontainer">
-            <button id="courseSelectBtn">Select Golf Course</button>
+            <button id="courseSelectBtn">Finalize Course Selection</button>
         </div>
     </div>
 
